--- a/templates/defend-dialog.html
+++ b/templates/defend-dialog.html
@@ -3,10 +3,10 @@
     <input type="hidden" name="shielditemid" value="{{shieldItemId}}"/>
     <div class="form-group">
       <label>{{localize 'MB.Defend'}} {{localize 'MB.DR'}}:</label>
-      <input type="text" name="defenddr" value="12" placeholder="12" data-dtype="Number" />
+      <input type="text" name="defenddr" value="{{defendDR}}" placeholder="12" data-dtype="Number" />
     </div>     
     <div class="form-group">
       <label>{{localize 'MB.IncomingAttack'}}:</label>
-      <input type="text" name="incomingattack" value="1d6" placeholder="1d6" data-dtype="String" />
+      <input type="text" name="incomingattack" value="{{incomingAttack}}" placeholder="1d6" data-dtype="String" />
     </div>    
 </form>
