Implement crit/fumble for attack/defend.

--- a/templates/attack-roll-card.html
+++ b/templates/attack-roll-card.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="outcome-text">
-        <span class="attack-comparison">{{attackComparison}}:</span><span class="attack-outcome">{{attackOutcome}}</span>
+        <span class="attack-outcome">{{attackOutcome}}</span>
     </div>
     {{#if damageRoll}}
         <div class="damage-roll">
