--- a/templates/defend-roll-card.html
+++ b/templates/defend-roll-card.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="outcome-text">
-        <span class="defend-comparison">{{defendComparison}}:</span><span class="defend-outcome">{{defendOutcome}}</span>
+        <span class="defend-outcome">{{defendOutcome}}</span>
     </div>    
     {{#if damageRoll}}        
         <div class="damage-roll">
