--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1470,6 +1470,10 @@ a.inline-roll {
   padding-left: 4px;
   padding-right: 4px;
 }
+.roll-card .dr-modifier {
+  margin-bottom: 5px;
+  text-align: center;
+}
 /* ====================== */
 /* Custom Dialogs */
 /* ====================== */
