Show armor DR modifier in defend dialog.

--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1470,7 +1470,7 @@ a.inline-roll {
   padding-left: 4px;
   padding-right: 4px;
 }
-.roll-card .dr-modifier {
+.dr-modifier {
   margin-bottom: 5px;
   text-align: center;
 }
