--- a/templates/defend-dialog.html
+++ b/templates/defend-dialog.html
@@ -1,10 +1,15 @@
 <form class="custom-dialog">
-    <input type="hidden" name="armoritemid" value="{{armorItemId}}"/>
-    <input type="hidden" name="shielditemid" value="{{shieldItemId}}"/>
     <div class="form-group">
       <label>{{localize 'MB.Defend'}} {{localize 'MB.DR'}}:</label>
       <input type="text" name="defenddr" value="{{defendDR}}" placeholder="12" data-dtype="Number" />
-    </div>     
+    </div> 
+    <div class="dr-modifiers">
+      {{#each drModifiers}}
+        <div class="dr-modifier">
+          {{this}}
+        </div>
+      {{/each}}  
+    </div>
     <div class="form-group">
       <label>{{localize 'MB.IncomingAttack'}}:</label>
       <input type="text" name="incomingattack" value="{{incomingAttack}}" placeholder="1d6" data-dtype="String" />
