--- a/templates/follower-sheet.html
+++ b/templates/follower-sheet.html
@@ -82,7 +82,7 @@
                             <span class="item-field">{{item.data.damageDie}}</span>
                         </div>
                         <div class="item-buttons">
-                            <button type="button" class="item-button rollable attack-button" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
+                            <button type="button" class="item-button rollable attack-button"
                                     title="{{localize 'MB.Attack'}}">{{localize 'MB.Attack'}}</button>
                         </div>
                         <div class="item-controls">
